Release Note

* 7/10/2014
  * removed <> from http logging messages
  * added refresh() to *Base
  * added http logging
  * changed to propagate aborting to DEFT
  * added caching for SiteMapper

* 7/8/2014
  * changed PP to kill child tasks when parent is aborted/failed/broken

* 7/7/2014
  * changed CF to remove lost files

* 7/3/2014
  * added consistency check for input datasets

* 7/2/2014
  * implemented to process dependent tasks before parent is completed

* 6/30/2014
  * added vo info to FQAN list when submtting jobs
  * using basename as LFN for useListPFN
  * added ticketID and ticketSystemType
  * fixed Booster in AtlasProdWatchDog

* 6/27/2014
  * fixed TaskRefiner to properly tasks when parent task failed to complete

* 6/26/2014
  * changed AtlasProdJobBroker to work with old fairsharepolicy format

* 6/25/2014
  * added support for multiple consumers

* 6/20/2014
  * fixed for pre-processing

* 6/11/2014
  * added templates for cron and logrotate
  * modified email notification to use BigPandaMon and JIRA

* 6/1/2014
  * added eventService to JEDI_Tasks

* 5/30/2014
  * added plugins for general purpose
  * fixed job_retry_history

* 5/27/2014
  * added multiple attempts to ctl script

* 5/26/2014
  * changed error level of import failure in FactoryBase

* 5/21/2014
  * changed ATLAS anal brokerage to use CVMFS check for nightlies
  * added addEventServiceTask.py

* 5/13/2014
  * added reassignTask

* 5/8/2014
  * added a build number to version name

* 5/6/2014
  * fixed for t_task.total_events

* 4/29/2014
  * use startEvent and endEvent of files for event service

* 4/23/2014
  * changed CC to allow nEventsPerInputFile

* 4/21/2014
  * initializing nevents, total_req_jobs and metadata

* 4/17/2014
  * introduced toabort
  * fixed pp to set failed to datasets for failed tasks

* 4/14/2014
  * fixed for task broker

* 4/9/2014
  * added AtlasAnalWatchDog
  * improved log in AtlasProdJobBroker
  * added randomSleep to all workers

* 4/7/2014