@@ -1,6 +1,8 @@
 Release Note
 
 * 7/10/2014
+  * changed status=timeout to aborted
+  * fixed calculation for effective walltime
   * removed <> from http logging messages
   * added refresh() to *Base
   * added http logging
